# 370Team8

./: .gitignore  CMakeLists.txt  LoginPage.cpp  LoginPage.h  LoginPage.ui  PasswordHasher.cpp  PasswordHasher.h  README.md  README.md.save  User.cpp  User.h  UserManager.cpp  UserManager.h  build_with_mingw.bat  currentQT370.pro  databasemanager.cpp  databasemanager.h  journal.cpp  journal.h  journalwindow.cpp  journalwindow.h  journalwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moodtracker.cpp  moodtracker.h  moodtracker.ui  tasklistwindow.cpp  tasklistwindow.h  tasklistwindow.ui  tests.cpp  tests.h
Final370GitPush/LyfeStyle/: journalwindow.cpp  journalwindow.ui  main.cpp  moodtracker.cpp  moodtracker.h  moodtracker.ui  tasklistwindow.cpp  tasklistwindow.h  tasklistwindow.ui
LyfeStyle/: LoginPage.cpp  UserManager.cpp  databasemanager.cpp  journal.h  mainwindow.ui  moodtracker.cpp  moodtracker.ui  tests.cpp  tests.h
